modify connect sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,16 +6,16 @@ spring.mvc.view.suffix=.jsp
 
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #không cần sử dụng driverclassname vì import lib sql server trong pom đã định nghĩa sẵn
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=Fashion	
-spring.datasource.username=sa
-spring.datasource.password=123
+spring.datasource.url=jdbc:sqlserver://Fashion01.mssql.somee.com;databaseName=Fashion01	
+spring.datasource.username=phamanhnhat1
+spring.datasource.password=31029054
 
 # ===============================
 # JPA / HIBERNATE
 # ===============================
 
 #ghi câu truy vấn tra console
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 #Tùy chỉnh phạm vi cho session hiện tại 
