--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,10 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.4.2.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
